# stock_securities

./: .env.example  .gitignore  DATA_INDEX_8271.md  Dockerfile  Makefile  README.md  finmind_broker_to_sqlite.py  finmind_holding_shares_per_to_sqlite.py  finmind_margin_purchase_short_sale_to_sqlite.py  finmind_price_adj_to_sqlite.py  finmind_price_to_sqlite.py  finmind_warrant_list_by_target.py  pyproject.toml  requirements.txt  sqlite_broker_web.py
agents/: AGENTS.md  roles.md  workflows.md
data/: README.md  __init__.py
docs/: FINMIND_INDEX.md  RESEARCH_PLAN.md
experiments/: README.md  registry.py
features/: README.md  __init__.py  feature_defs.py  feature_store.py
memory-bank/: README.md
notebooks/: broker_flow_backtest.ipynb
papers/: README.md
research/: README.md  __init__.py  backtest_engine.py  broker_flow.py  compare_inference.py  compare_runs.py  data_loader.py  data_state.py  orchestrator.py  pipeline.py  report_generator.py  run.py  specs.py  statistics.py  studies.py
research_specs/: README.md  ma_cross_example_v1.design.md  ma_cross_example_v1.hypothesis.md  ma_cross_example_v1.json
scripts/: download_sample_data.py
tests/: _bootstrap.py  test_broker_single_table.py  test_cli_validation.py  test_compare_inference.py  test_config.py  test_daily_bundle.py  test_data_catalog_integrity.py  test_experiment_registry.py  test_feature_store.py  test_finmind_loader_wrapper.py  test_holding_shares_modes.py  test_inference_modules.py  test_kmeans_strategy.py  test_meta_runs.py  test_orchestrator_smoke.py  test_paper_outputs_pipeline.py  (+12 more)
(+134 files in other folders)
