[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finmind-dl"
version = "0.1.0"
description = "Unified FinMind downloader CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "tqdm",
    "pyarrow",
    "nbformat",
    "nbclient",
    "nbconvert",
    "python-dotenv",
    "networkx",
    "hmmlearn",
]

[project.scripts]
finmind-dl = "finmind_dl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
